--- a/app/src/main/res/layout/add_user.xml
+++ b/app/src/main/res/layout/add_user.xml
@@ -2,6 +2,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -93,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="75dp"
                 android:layout_marginLeft="75dp"
-                android:layout_marginTop="75dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="75dp"
                 android:layout_marginRight="75dp"
                 android:text="@string/text_registrar_usuario"
@@ -214,6 +215,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/text_registrar_nombre"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+            <TextView
+                android:id="@+id/text_add_usuario_errors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="375dp"
+                android:layout_marginRight="375dp"
+                app:layout_constraintBottom_toTopOf="@+id/button_modify_cancelar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_registrar_telefono" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
