--- a/app/src/main/res/layout/fragment_admin_cliente.xml
+++ b/app/src/main/res/layout/fragment_admin_cliente.xml
@@ -101,7 +101,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="textEmailAddress"
                 app:layout_constraintEnd_toStartOf="@+id/button_cliente_buscar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_admin_cliente" />
