--- a/app/src/main/res/layout/fragment_producto.xml
+++ b/app/src/main/res/layout/fragment_producto.xml
@@ -11,36 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edit_usuario_producto_buscar"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.099"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_producto_title" />
-
-    <Button
-        android:id="@+id/button_usu_producto_buscar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/button_buscar"
-        app:layout_constraintStart_toEndOf="@+id/edit_usuario_producto_buscar"
-        app:layout_constraintTop_toBottomOf="@+id/text_producto_title" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/actionButton_usuario_carrito"
@@ -58,22 +35,22 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="409dp"
-        android:layout_height="394dp"
+        android:layout_width="383dp"
+        android:layout_height="388dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_usuario_producto_buscar">
+        app:layout_constraintTop_toBottomOf="@+id/text_producto_title">
 
         <ListView
             android:id="@+id/listView_usu_producto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="375dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
