--- a/app/src/main/res/layout/item_carrito.xml
+++ b/app/src/main/res/layout/item_carrito.xml
@@ -3,32 +3,24 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@android:color/white"
     android:layout_marginTop="10dp"
+    android:background="@android:color/white"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal">
-
-    <CheckBox
-        android:id="@+id/checks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:button="@android:drawable/radiobutton_off_background" />
 
     <ImageView
         android:id="@+id/imagen_carrito_producto"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="215dp"
         android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -90,4 +82,12 @@
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_carrito_eliminar"
+        android:layout_width="45dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@android:drawable/ic_menu_delete"
+        android:backgroundTint="@color/colorRed" />
 </LinearLayout>
