--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
-
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.proyecto_cafeteria.Fragment.User.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_user_inicio" />
+    app:startDestination="@+id/navigation_producto">
 
     <fragment
         android:id="@+id/navigation_producto"
