--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,21 +7,21 @@
 
     <fragment
         android:id="@+id/navigation_producto"
-        android:name="com.example.proyecto_cafeteria.Fragment.User.Producto.ProductoFragment"
+        android:name="com.example.proyecto_cafeteria.fragment.User.Producto.ProductoFragment"
         android:label="@string/title_producto"
         tools:layout="@layout/fragment_producto" />
 
 
     <fragment
         android:id="@+id/navigation_pedido"
-        android:name="com.example.proyecto_cafeteria.Fragment.User.Pedido.PedidoFragment"
+        android:name="com.example.proyecto_cafeteria.fragment.User.Pedido.PedidoFragment"
         android:label="@string/title_pedido"
         tools:layout="@layout/fragment_pedido" />
 
 
     <fragment
         android:id="@+id/navigation_perfil"
-        android:name="com.example.proyecto_cafeteria.Fragment.User.Perfil.PerfilFragment"
+        android:name="com.example.proyecto_cafeteria.fragment.User.Perfil.PerfilFragment"
         android:label="@string/title_perfil"
         tools:layout="@layout/fragment_perfil" />
 </navigation>
